--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">RideCellMapTest</string>
     <string name="title_activity_map">Map</string>
-    <string name="origin">Origin</string>
-    <string name="destination">Destination</string>
+    <string name="origin">Origin (Latitude, Longitude)</string>
+    <string name="destination">Destination (Latitude, Longitude)</string>
     <string name="speed">Speed</string>
+    <string name="go">Go</string>
 </resources>
